# youbot

./: .gitmodules  README.md  README.md~  readme.md
ar_tag_manipulations/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
ar_tag_manipulations/src/: find_closest_tag.cpp
ar_tag_manipulations/srv/: getClosestTag.srv  getClosestTag.srv~
temoto_intuitive_teleoperator/: .gitignore  .gitmodules  LICENSE  README.md
temoto_intuitive_teleoperator/temoto/: CMakeLists.txt  package.xml  temoto_verbal_instructions.odt  temoto_verbal_instructions_ver02.odt
temoto_intuitive_teleoperator/temoto/config/: vaultbot.yaml
temoto_intuitive_teleoperator/temoto/launch/: init_robotiq.launch  load_temoto_params.launch  pocketsphinx.launch  sia5_temoto.launch  ur3_driver.launch  ur3_temoto.launch  vaultbot_moveit_rviz.launch  vaultbot_temoto.launch  vaultbot_temoto.rviz
temoto_intuitive_teleoperator/temoto/msg/: Command.msg  Status.msg
temoto_intuitive_teleoperator/temoto/src/: human_frame_broadcaster.cpp  interpret_utterance.cpp  move_robot.cpp  navigate_robot.cpp  robotiq.cpp  rviz_visual.cpp  start_teleop.cpp  temoto_common.cpp
temoto_intuitive_teleoperator/temoto/srv/: ChangeTf.srv  Goal.srv
temoto_intuitive_teleoperator/temoto_sia5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
temoto_intuitive_teleoperator/temoto_sia5_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  temoto_sia5.srdf
temoto_intuitive_teleoperator/temoto_sia5_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  moveit_with_anim_view.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  temoto_sia5_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
temoto_intuitive_teleoperator/temoto_support/: CMakeLists.txt  package.xml
temoto_intuitive_teleoperator/temoto_support/meshes/: vacuumft.stl
temoto_intuitive_teleoperator/temoto_support/pocketsphinx_kb/: TAR1163.tgz  TAR2426.tgz  TAR2625.tgz  TAR4358.tgz  TAR5885.tgz  TAR7034.tgz  TAR7107.tgz  TAR8542.tgz  temoto_corpus.txt  temoto_sphinx_kb.dic  temoto_sphinx_kb.lm  temoto_sphinx_kb.log_pronounce  temoto_sphinx_kb.sent  temoto_sphinx_kb.vocab
temoto_intuitive_teleoperator/temoto_support/urdf/: temoto_sia5.xacro  temoto_ur3.xacro  temoto_vaultbot.xacro
temoto_intuitive_teleoperator/temoto_ur3_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
temoto_intuitive_teleoperator/temoto_ur3_moveit_config/config/: fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  temoto_ur3.srdf
temoto_intuitive_teleoperator/temoto_ur3_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  moveit_with_anim_view.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  temoto_ur3_moveit_controller_manager.launch.xml  temoto_ur3_moveit_planning_execution.launch  trajectory_execution.launch.xml  warehouse.launch
temoto_intuitive_teleoperator/youbot_moveit_config/: package.xml
temoto_intuitive_teleoperator/youbot_moveit_config/config/: controllers.yaml  joint_limits.yaml
youbot_box_demo/: CMakeLists.txt  CMakeLists.txt~  README  package.xml
youbot_box_demo/launch/: box_demo.launch  box_demo.launch~
youbot_box_demo/src/: youbotBoxDemo.cpp
youbot_manipulation/youbot_arm_kinematics_moveit/: CMakeLists.txt
youbot_manual_operation/: CMakeLists.txt  package.xml
youbot_manual_operation/launch/: box_demo.launch  box_demo.launch~
youbot_manual_operation/src/: trajectoryRecorder.cpp  trajectoryRecorder_Old.cpp  youbotJointRecorder.cpp~  youbotManualOperation.cpp  youbot_joy.cpp
youbot_manual_operation/srv/: executeTrajectory.srv  executeTrajectory.srv~  getClosestMarker.srv~
youbot_move/: CMakeLists.txt  CMakeLists.txt~  package.xml
youbot_move/src/: backup_code.cpp  test_talker.cpp  test_talker.cpp~  youbot_move.cpp  youbot_move.cpp~
youbot_moveit_config/: .setup_assistant  CMakeLists.txt
youbot_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  youbot.srdf
youbot_moveit_config/launch/: demo.launch  demo.launch~  moveit.rviz  moveit.rviz~  planning_context.launch  sensor_manager.launch.xml  setup_assistant.launch
youbot_navigation/: CMakeLists.txt  README.md
youbot_navigation/youbot_navigation_common/: CMakeLists.txt  package.xml
youbot_navigation/youbot_navigation_common/launch/: base_front_hokuyo_node.launch
youbot_navigation/youbot_navigation_global/: CMakeLists.txt  package.xml
youbot_navigation/youbot_navigation_global/launch/: 2dslam.launch
youbot_navigation/youbot_navigation_local/: CMakeLists.txt  package.xml
youbot_network_estopper/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
youbot_network_estopper/src/: HeartbeatGenerator.cpp  YoubotNetworkEstopper.cpp  YoubotNetworkEstopper.cpp~  new_estopper.cpp~
youbot_simpack/: CMakeLists.txt  README.mediawiki  package.xml
youbot_simpack/launch/: full_simulation_simple.launch  navigation_gazebo.launch  navigation_simple.launch  setup_navigation.launch  setup_robot.launch
youbot_simpack/map/: maze.yaml  maze3.pgm
youbot_simulator/: CMakeLists.txt  README.mediawiki  package.xml
youbot_simulator/launch/: full_simulation.launch  navigation.launch  navigation.rviz  navigation_no_urdf.launch
youbot_simulator/map/: testmap3.yaml
youbot_trajectory_plotter/: CMakeLists.txt  README.md  package.xml
youbot_trajectory_plotter/src/: fake_publisher.py  youbot_trajecotry_plotter.py
(+22 files in other folders)
